# Grasp_Point_Detection

./: .gitignore  README.md
src/: README.md
src/vbm_project/vbm_project_env/: CMakeLists.txt  package.xml
src/vbm_project/vbm_project_env/launch/: simulation.launch.py
src/vbm_project/vbm_project_env/urdf/: camera.urdf
src/vbm_project/vbm_project_env/worlds/: simulation.world
src/vbm_project/vbm_project_grasping/: CMakeLists.txt  package.xml
src/vbm_project/vbm_project_grasping/scripts/: clustering_node.py  grasp_synthesis_node.py  transform_point_cloud.py
src/vbm_project/vbm_project_grasping/src/: processPointCloud.cpp
